--- a/index.html
+++ b/index.html
@@ -1,185 +1,49 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="bn">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>আম্মারকে বাঁচান!</title>
-    <style>
-        /* আপনার ছবির মত হুবহু কালার এবং ডিজাইন */
-        body {
-            margin: 0; padding: 0;
-            background-color: #fcf9c5; /* স্ক্রিনশটের সেই হালকা হলুদ ব্যাকগ্রাউন্ড */
-            font-family: 'Arial', sans-serif;
-            overflow: hidden; touch-action: none;
-        }
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>My Game</title>
 
-        #game-container {
-            position: relative; width: 100%; max-width: 450px;
-            height: 100vh; margin: 0 auto;
-            background-color: #fcf9c5;
-        }
+<link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@400;600;700&display=swap" rel="stylesheet">
 
-        /* স্কোর বোর্ড স্টাইল */
-        #score-board {
-            position: absolute; top: 40px; left: 50%;
-            transform: translateX(-50%);
-            background: #fff9c4; border: 2px solid #e0cf8d;
-            padding: 10px 40px; border-radius: 15px;
-            font-size: 24px; font-weight: bold; color: #333;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-        }
-
-        /* প্লেয়ার: আম্মার */
-        #player {
-            position: absolute; bottom: 150px; left: 50%;
-            width: 90px; height: 90px;
-            background: url('ammar.png') no-repeat center center;
-            background-size: contain;
-            transform: translateX(-50%);
-            z-index: 100;
-        }
-
-        /* শত্রু: ছাত্রলীগ লোগো */
-        .enemy {
-            position: absolute; width: 60px; height: 60px;
-            background: url('bcl.png') no-repeat center center;
-            background-size: contain;
-        }
-
-        /* খেলা শেষ পপআপ (ছবির মত) */
-        #game-over-modal {
-            display: none; position: absolute; top: 50%; left: 50%;
-            transform: translate(-50%, -50%);
-            width: 85%; background: white; border-radius: 20px;
-            border: 4px solid #d32f2f; padding: 30px 20px;
-            text-align: center; z-index: 1000;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-        }
-
-        #game-over-modal h2 { color: #d32f2f; font-size: 32px; margin: 0; }
-        .score-text { font-size: 20px; margin: 15px 0; color: #333; }
-
-        .btn {
-            display: block; width: 100%; padding: 15px; margin: 10px 0;
-            border: none; border-radius: 12px; font-size: 18px;
-            font-weight: bold; color: white; cursor: pointer;
-        }
-        .btn-restart { background-color: #5c8aff; }
-        .btn-follow { background-color: #66bb6a; }
-
-        /* লিডারবোর্ড সেকশন */
-        #leaderboard {
-            position: absolute; bottom: 20px; left: 50%;
-            transform: translateX(-50%); width: 90%;
-            background: white; border: 2px solid #5c8aff;
-            border-radius: 15px; padding: 15px; text-align: center;
-        }
-    </style>
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<div id="game-container">
-    <div id="score-board">Score: <span id="current-score">0</span></div>
-    
-    <div id="player"></div>
+<div class="wrap">
 
-    <div id="game-over-modal">
-        <h2>খেলা শেষ!</h2>
-        <p class="score-text">আপনার স্কোর: <span id="final-score">0</span></p>
-        <button class="btn btn-restart" onclick="location.reload()">আবার খেলুন</button>
-        <button class="btn btn-follow">ফলো করুন</button>
-    </div>
+<header>
+  <h2>🎮 My Game</h2>
+  <div class="hud">
+    Score: <span id="score">0</span> |
+    Best: <span id="best">0</span>
+  </div>
+</header>
 
-    <div id="leaderboard">
-        <h3 style="color:#d32f2f">🏆 সেরা খেলোয়াড়</h3>
-        <hr style="border: 0.5px solid #eee">
-        <p style="color:#777; font-size: 12px;">Powered by পাতা পাটোয়ারী</p>
-    </div>
+<main>
+
+<div id="game">
+  Tap to Play
 </div>
 
-<script>
-    const container = document.getElementById('game-container');
-    const player = document.getElementById('player');
-    const scoreDisplay = document.getElementById('current-score');
-    const finalScoreDisplay = document.getElementById('final-score');
-    const gameOverModal = document.getElementById('game-over-modal');
+<div class="buttons">
+  <button onclick="startGame()">Start</button>
+  <button onclick="pauseGame()">Pause</button>
+  <button onclick="shareGame()">Share</button>
+</div>
 
-    let score = 0;
-    let isGameOver = false;
+</main>
 
-    // --- মোবাইল ড্র্যাগ কন্ট্রোল (Touch dragging) ---
-    container.addEventListener('touchmove', (e) => {
-        if (isGameOver) return;
-        e.preventDefault();
-        let touch = e.touches[0];
-        let containerRect = container.getBoundingClientRect();
-        let newX = touch.clientX - containerRect.left;
-        
-        // বাউন্ডারি চেক (স্ক্রিনের বাইরে যাবে না)
-        if (newX > 45 && newX < containerRect.width - 45) {
-            player.style.left = newX + "px";
-        }
-    });
+<section class="leaderboard">
+  <h3>Top Players</h3>
+  <ol id="list"></ol>
+</section>
 
-    // পিসি মাউস কন্ট্রোল
-    container.addEventListener('mousemove', (e) => {
-        if (isGameOver) return;
-        let containerRect = container.getBoundingClientRect();
-        let newX = e.clientX - containerRect.left;
-        if (newX > 45 && newX < containerRect.width - 45) {
-            player.style.left = newX + "px";
-        }
-    });
+</div>
 
-    function spawnEnemy() {
-        if (isGameOver) return;
-
-        const enemy = document.createElement('div');
-        enemy.classList.add('enemy');
-        enemy.style.left = Math.random() * (container.clientWidth - 60) + "px";
-        enemy.style.top = "-70px";
-        container.appendChild(enemy);
-
-        let fallSpeed = 4 + (score / 10); // স্কোর বাড়লে গতি বাড়বে
-        let moveEnemy = setInterval(() => {
-            if (isGameOver) {
-                clearInterval(moveEnemy);
-                enemy.remove();
-                return;
-            }
-
-            let currentTop = parseInt(enemy.style.top);
-            enemy.style.top = (currentTop + fallSpeed) + "px";
-
-            // কলিশন ডিটেকশন
-            let pRect = player.getBoundingClientRect();
-            let eRect = enemy.getBoundingClientRect();
-
-            if (pRect.left < eRect.right && pRect.right > eRect.left &&
-                pRect.top < eRect.bottom && pRect.bottom > eRect.top) {
-                endGame();
-            }
-
-            if (currentTop > window.innerHeight) {
-                enemy.remove();
-                clearInterval(moveEnemy);
-                score++;
-                scoreDisplay.innerText = score;
-            }
-        }, 20);
-
-        setTimeout(spawnEnemy, Math.max(500, 1200 - score * 5));
-    }
-
-    function endGame() {
-        isGameOver = true;
-        gameOverModal.style.display = 'block';
-        finalScoreDisplay.innerText = score;
-    }
-
-    // গেম শুরু
-    spawnEnemy();
-</script>
-
+<script src="game.js"></script>
 </body>
 </html>
+
