--- a/index.html
+++ b/index.html
@@ -1,49 +1,551 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="bn">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>My Game</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>আম্মারকে বাঁচান!</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@400;600;700&display=swap" rel="stylesheet">
+  <!-- Better font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@400;600;700&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      margin: 0; padding: 0;
+      background-color: #fcf9c5;
+      font-family: 'Hind Siliguri', Arial, sans-serif;
+      overflow: hidden;
+      touch-action: none;
+    }
+
+    #game-container {
+      position: relative; width: 100%; max-width: 450px;
+      height: 100vh; margin: 0 auto;
+      background-color: #fcf9c5;
+      overflow: hidden;
+    }
+
+    /* Score board */
+    #score-board {
+      position: absolute; top: 26px; left: 50%;
+      transform: translateX(-50%);
+      background: #fff9c4; border: 2px solid #e0cf8d;
+      padding: 10px 14px; border-radius: 15px;
+      font-size: 20px; font-weight: 700; color: #333;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      display: flex; align-items: center; gap: 10px;
+      z-index: 1200;
+      user-select: none;
+    }
+    #score-board .spacer { width: 8px; }
+    #score-board .pill {
+      background: rgba(0,0,0,0.06);
+      border: 1px solid rgba(0,0,0,0.08);
+      padding: 6px 10px;
+      border-radius: 999px;
+      font-size: 14px;
+      font-weight: 700;
+      color: #333;
+      white-space: nowrap;
+    }
+
+    .mini-btn {
+      border: none;
+      border-radius: 10px;
+      padding: 8px 10px;
+      font-size: 14px;
+      font-weight: 800;
+      cursor: pointer;
+      color: white;
+      background: #5c8aff;
+    }
+    .mini-btn.secondary { background: #66bb6a; }
+    .mini-btn.ghost { background: rgba(0,0,0,0.1); color: #222; }
+
+    /* Player */
+    #player {
+      position: absolute; bottom: 150px; left: 50%;
+      width: 90px; height: 90px;
+      background: url('ammar.png') no-repeat center center;
+      background-size: contain;
+      transform: translateX(-50%);
+      z-index: 100;
+      pointer-events: none;
+    }
+
+    /* Enemy */
+    .enemy {
+      position: absolute; width: 60px; height: 60px;
+      background: url('bcl.png') no-repeat center center;
+      background-size: contain;
+      will-change: transform;
+      pointer-events: none;
+    }
+
+    /* Overlay modal (Start / Pause / Game Over) */
+    .overlay {
+      display: none;
+      position: absolute; inset: 0;
+      background: rgba(0,0,0,0.45);
+      z-index: 1500;
+      align-items: center;
+      justify-content: center;
+      padding: 18px;
+    }
+    .overlay.show { display: flex; }
+
+    .modal {
+      width: 88%;
+      max-width: 420px;
+      background: white;
+      border-radius: 20px;
+      border: 4px solid #d32f2f;
+      padding: 22px 18px;
+      text-align: center;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+    }
+
+    .modal h2 { color: #d32f2f; font-size: 28px; margin: 0; font-weight: 900; }
+    .score-text { font-size: 18px; margin: 10px 0; color: #333; font-weight: 700; }
+
+    .btn {
+      display: block; width: 100%; padding: 14px; margin: 10px 0;
+      border: none; border-radius: 12px; font-size: 18px;
+      font-weight: 900; color: white; cursor: pointer;
+    }
+    .btn-restart { background-color: #5c8aff; }
+    .btn-follow { background-color: #66bb6a; }
+    .btn-ghost { background: rgba(0,0,0,0.08); color: #222; }
+
+    .name-box {
+      display: grid;
+      gap: 8px;
+      margin-top: 10px;
+      text-align: left;
+    }
+    .name-box label { font-size: 13px; color: #333; font-weight: 700; }
+    .name-box input {
+      width: 100%;
+      padding: 12px 12px;
+      border-radius: 12px;
+      border: 1px solid rgba(0,0,0,0.15);
+      outline: none;
+      font-size: 16px;
+      font-weight: 700;
+    }
+    .note {
+      margin-top: 8px;
+      font-size: 12px;
+      color: #666;
+      line-height: 1.4;
+    }
+
+    /* Leaderboard */
+    #leaderboard {
+      position: absolute; bottom: 18px; left: 50%;
+      transform: translateX(-50%); width: 90%;
+      background: white; border: 2px solid #5c8aff;
+      border-radius: 15px; padding: 12px; text-align: center;
+      z-index: 1100;
+    }
+    #leaderboard h3 { margin: 0; color:#d32f2f; font-weight: 900; }
+    #lb-list { margin-top: 10px; display: grid; gap: 6px; }
+    .lb-row {
+      display: flex;
+      justify-content: space-between;
+      gap: 10px;
+      padding: 8px 10px;
+      border-radius: 12px;
+      background: rgba(0,0,0,0.04);
+      border: 1px solid rgba(0,0,0,0.06);
+      font-weight: 800;
+      color: #222;
+      font-size: 14px;
+    }
+    .powered { color:#777; font-size: 12px; margin-top: 8px; }
+
+    /* ensure pointer events are smooth */
+    #game-container { touch-action: none; }
+  </style>
 </head>
 
 <body>
+  <div id="game-container">
+    <div id="score-board">
+      <div class="pill">Score: <span id="current-score">0</span></div>
+      <div class="pill">Time: <span id="time">00:00</span></div>
+      <button class="mini-btn" id="btnStart">Start</button>
+      <button class="mini-btn ghost" id="btnPause">Pause</button>
+      <button class="mini-btn secondary" id="btnShareTop">Share</button>
+    </div>
 
-<div class="wrap">
+    <div id="player"></div>
 
-<header>
-  <h2>🎮 My Game</h2>
-  <div class="hud">
-    Score: <span id="score">0</span> |
-    Best: <span id="best">0</span>
+    <!-- Overlay (Start/Pause/GameOver uses one) -->
+    <div class="overlay show" id="overlay">
+      <div class="modal" id="modal">
+        <h2 id="modalTitle">Ready?</h2>
+        <p class="score-text" id="modalText">Start চাপলে গেম শুরু হবে।</p>
+
+        <button class="btn btn-restart" id="btnPrimary">Start</button>
+        <button class="btn btn-ghost" id="btnSecondary">Close</button>
+
+        <div class="note" id="modalNote">
+          ✅ Mobile drag smoother • ✅ Share • ✅ Leaderboard (Local)
+        </div>
+      </div>
+    </div>
+
+    <!-- Game over content (we reuse overlay; name input appears only on over) -->
+    <div id="leaderboard">
+      <h3>🏆 সেরা খেলোয়াড়</h3>
+      <hr style="border: 0.5px solid #eee">
+      <div id="lb-list"></div>
+      <p class="powered">Powered by পাতা পাটোয়ারী</p>
+    </div>
   </div>
-</header>
 
-<main>
+<script>
+  const container = document.getElementById('game-container');
+  const player = document.getElementById('player');
 
-<div id="game">
-  Tap to Play
-</div>
+  const scoreDisplay = document.getElementById('current-score');
+  const timeEl = document.getElementById('time');
 
-<div class="buttons">
-  <button onclick="startGame()">Start</button>
-  <button onclick="pauseGame()">Pause</button>
-  <button onclick="shareGame()">Share</button>
-</div>
+  const overlay = document.getElementById('overlay');
+  const modalTitle = document.getElementById('modalTitle');
+  const modalText = document.getElementById('modalText');
+  const modalNote = document.getElementById('modalNote');
 
-</main>
+  const btnPrimary = document.getElementById('btnPrimary');
+  const btnSecondary = document.getElementById('btnSecondary');
 
-<section class="leaderboard">
-  <h3>Top Players</h3>
-  <ol id="list"></ol>
-</section>
+  const btnStart = document.getElementById('btnStart');
+  const btnPause = document.getElementById('btnPause');
+  const btnShareTop = document.getElementById('btnShareTop');
 
-</div>
+  const lbList = document.getElementById('lb-list');
 
-<script src="game.js"></script>
+  // --------- Game state ----------
+  let state = "menu"; // menu | playing | paused | over
+  let score = 0;
+
+  // time
+  let startAt = 0;
+  let lastFrame = 0;
+
+  // player x
+  let dragging = false;
+
+  // enemies (RAF loop friendly)
+  const enemies = [];
+  let nextSpawnAt = 0;
+
+  // leaderboard (localStorage)
+  const LB_KEY = "ammar_save_lb_v1";
+  const BEST_KEY = "ammar_save_best_v1";
+  let best = Number(localStorage.getItem(BEST_KEY) || 0);
+
+  function clamp(n, a, b){ return Math.max(a, Math.min(b, n)); }
+
+  function formatTime(sec) {
+    const mm = String(Math.floor(sec / 60)).padStart(2, "0");
+    const ss = String(sec % 60).padStart(2, "0");
+    return mm + ":" + ss;
+  }
+
+  function setOverlay(kind) {
+    overlay.classList.add("show");
+
+    if (kind === "menu") {
+      modalTitle.textContent = "Ready?";
+      modalText.textContent = "Start চাপলে গেম শুরু হবে।";
+      btnPrimary.textContent = "Start";
+      btnSecondary.textContent = "Close";
+      btnSecondary.style.display = "";
+      modalNote.style.display = "";
+
+      btnPrimary.onclick = startGame;
+      btnSecondary.onclick = () => overlay.classList.remove("show");
+    }
+
+    if (kind === "paused") {
+      modalTitle.textContent = "Paused";
+      modalText.textContent = "Resume করতে Pause আবার চাপো।";
+      btnPrimary.textContent = "Resume";
+      btnSecondary.textContent = "Close";
+      btnSecondary.style.display = "";
+      modalNote.style.display = "none";
+
+      btnPrimary.onclick = resumeGame;
+      btnSecondary.onclick = () => overlay.classList.remove("show");
+    }
+
+    if (kind === "over") {
+      modalTitle.textContent = "খেলা শেষ!";
+      modalText.innerHTML = `আপনার স্কোর: <b>${score}</b>`;
+
+      // inject name input for leaderboard submit
+      modalNote.style.display = "block";
+      modalNote.innerHTML = `
+        <div class="name-box">
+          <label for="playerName">নাম (Leaderboard)</label>
+          <input id="playerName" maxlength="20" placeholder="আপনার নাম লিখুন" />
+          <button class="btn btn-follow" id="btnSubmitScore">Submit Score</button>
+          <button class="btn btn-restart" id="btnRestart">আবার খেলুন</button>
+          <button class="btn btn-ghost" id="btnShare">Share</button>
+        </div>
+        <div class="note">⚠️ GitHub Pages এ অনলাইন ডাটাবেস নেই, তাই এটা <b>Local</b> এ সেভ হয়।</div>
+      `;
+
+      btnPrimary.style.display = "none";
+      btnSecondary.style.display = "none";
+
+      // wire up
+      const nameInput = document.getElementById("playerName");
+      const btnSubmitScore = document.getElementById("btnSubmitScore");
+      const btnRestart2 = document.getElementById("btnRestart");
+      const btnShare = document.getElementById("btnShare");
+
+      btnSubmitScore.onclick = () => {
+        const name = (nameInput.value || "").trim().slice(0, 20);
+        if (!name) return alert("নাম দিন");
+        saveToLeaderboard(name, score);
+        renderLeaderboard();
+        alert("✅ Leaderboard এ সেভ হয়েছে!");
+      };
+
+      btnRestart2.onclick = () => {
+        // restore default modal buttons
+        btnPrimary.style.display = "";
+        btnSecondary.style.display = "";
+        modalNote.innerHTML = "✅ Mobile drag smoother • ✅ Share • ✅ Leaderboard (Local)";
+        startGame();
+      };
+
+      btnShare.onclick = () => shareScore(score);
+    }
+  }
+
+  function hideOverlay() {
+    overlay.classList.remove("show");
+    // if over modal injected hid buttons, restore later by restarting
+  }
+
+  function resetGame() {
+    // remove enemies DOM
+    enemies.forEach(o => o.el.remove());
+    enemies.length = 0;
+
+    score = 0;
+    scoreDisplay.textContent = score;
+
+    startAt = performance.now();
+    lastFrame = startAt;
+    timeEl.textContent = "00:00";
+
+    nextSpawnAt = startAt + 700;
+  }
+
+  function startGame() {
+    resetGame();
+    state = "playing";
+    btnStart.disabled = true;
+    btnPause.textContent = "Pause";
+    hideOverlay();
+  }
+
+  function pauseGame() {
+    if (state !== "playing") return;
+    state = "paused";
+    btnPause.textContent = "Resume";
+    setOverlay("paused");
+  }
+
+  function resumeGame() {
+    if (state !== "paused") return;
+    state = "playing";
+    btnPause.textContent = "Pause";
+    lastFrame = performance.now(); // avoid jump
+    hideOverlay();
+  }
+
+  function togglePause() {
+    if (state === "playing") pauseGame();
+    else if (state === "paused") resumeGame();
+  }
+
+  function endGame() {
+    if (state === "over") return;
+    state = "over";
+    btnStart.disabled = false;
+    btnPause.textContent = "Pause";
+    setOverlay("over");
+  }
+
+  // --------- Input: pointer drag (mobile+pc) ----------
+  container.addEventListener("pointerdown", (e) => {
+    if (state === "over") return;
+    dragging = true;
+    try { container.setPointerCapture(e.pointerId); } catch {}
+    movePlayerTo(e.clientX);
+  }, { passive: false });
+
+  container.addEventListener("pointermove", (e) => {
+    if (!dragging) return;
+    if (state === "over") return;
+    e.preventDefault();
+    movePlayerTo(e.clientX);
+  }, { passive: false });
+
+  container.addEventListener("pointerup", () => dragging = false);
+  container.addEventListener("pointercancel", () => dragging = false);
+
+  function movePlayerTo(clientX) {
+    const rect = container.getBoundingClientRect();
+    const x = clientX - rect.left;
+    const px = clamp(x, 45, rect.width - 45);
+    player.style.left = px + "px";
+  }
+
+  // --------- Enemies + loop (RAF) ----------
+  function spawnEnemy(now) {
+    const enemy = document.createElement('div');
+    enemy.classList.add('enemy');
+
+    const x = Math.random() * (container.clientWidth - 60);
+    enemy.style.transform = `translate(${x}px, -70px)`;
+    container.appendChild(enemy);
+
+    const speed = 220 + (score * 10); // px/sec, score বাড়লে গতি বাড়বে
+    enemies.push({ el: enemy, x, y: -70, speed });
+  }
+
+  function intersects(a, b) {
+    return (a.left < b.right && a.right > b.left && a.top < b.bottom && a.bottom > b.top);
+  }
+
+  function loop(now) {
+    requestAnimationFrame(loop);
+
+    if (state !== "playing") return;
+
+    const dt = Math.min(0.033, (now - lastFrame) / 1000);
+    lastFrame = now;
+
+    // time
+    const elapsed = Math.floor((now - startAt) / 1000);
+    timeEl.textContent = formatTime(elapsed);
+
+    // spawn schedule
+    if (now >= nextSpawnAt) {
+      spawnEnemy(now);
+      const gap = Math.max(380, 1100 - score * 6); // spawn faster over time
+      nextSpawnAt = now + gap;
+    }
+
+    // update enemies
+    const pRect = player.getBoundingClientRect();
+
+    for (let i = enemies.length - 1; i >= 0; i--) {
+      const o = enemies[i];
+      o.y += o.speed * dt;
+      o.el.style.transform = `translate(${o.x}px, ${o.y}px)`;
+
+      const eRect = o.el.getBoundingClientRect();
+      if (intersects(pRect, eRect)) {
+        endGame();
+        return;
+      }
+
+      if (o.y > window.innerHeight + 80) {
+        o.el.remove();
+        enemies.splice(i, 1);
+        score++;
+        scoreDisplay.textContent = score;
+
+        // best
+        if (score > best) {
+          best = score;
+          localStorage.setItem(BEST_KEY, String(best));
+        }
+      }
+    }
+  }
+  requestAnimationFrame((t) => { lastFrame = t; loop(t); });
+
+  // --------- Share ----------
+  function cleanUrl() {
+    const u = new URL(location.href);
+    u.search = "";
+    u.hash = "";
+    return u.toString();
+  }
+
+  async function shareScore(s) {
+    const url = cleanUrl();
+    const text = `আমি ${s} স্কোর করেছি! তুমি পারবে?`;
+    if (navigator.share) {
+      try {
+        await navigator.share({ title: document.title, text, url });
+        return;
+      } catch {}
+    }
+    // WhatsApp fallback
+    window.open(`https://wa.me/?text=${encodeURIComponent(text + " " + url)}`, "_blank");
+  }
+
+  btnShareTop.onclick = () => shareScore(score);
+
+  // --------- Leaderboard (LocalStorage) ----------
+  function loadLB() {
+    try {
+      const raw = localStorage.getItem(LB_KEY);
+      const arr = raw ? JSON.parse(raw) : [];
+      return Array.isArray(arr) ? arr : [];
+    } catch { return []; }
+  }
+
+  function saveToLeaderboard(name, score) {
+    const arr = loadLB();
+    arr.push({ name, score, ts: Date.now() });
+    arr.sort((a,b) => b.score - a.score);
+    localStorage.setItem(LB_KEY, JSON.stringify(arr.slice(0, 10)));
+  }
+
+  function escapeHtml(s) {
+    return String(s).replace(/[&<>"']/g, (m) => ({
+      "&":"&amp;","<":"&lt;",">":"&gt;","\\"":"&quot;","'":"&#039;"
+    }[m]));
+  }
+
+  function renderLeaderboard() {
+    const arr = loadLB().sort((a,b) => b.score - a.score).slice(0, 10);
+    lbList.innerHTML = "";
+    if (arr.length === 0) {
+      lbList.innerHTML = `<div style="color:#777;font-size:13px;font-weight:700">এখনও কেউ সাবমিট করে নাই</div>`;
+      return;
+    }
+    arr.forEach((x, i) => {
+      const row = document.createElement("div");
+      row.className = "lb-row";
+      row.innerHTML = `<span>${i+1}) ${escapeHtml(x.name)}</span><b>${x.score}</b>`;
+      lbList.appendChild(row);
+    });
+  }
+
+  // --------- Buttons ----------
+  btnStart.onclick = () => {
+    if (state === "playing") return;
+    startGame();
+  };
+  btnPause.onclick = togglePause;
+
+  // init
+  renderLeaderboard();
+  setOverlay("menu");
+</script>
+
 </body>
 </html>
-
