--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
 <title>আম্মারকে বাঁচান</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@400;600;700&display=swap" rel="stylesheet">
@@ -12,7 +13,7 @@
 
 body{
   margin:0;
-  font-family:'Hind Siliguri',system-ui,sans-serif;
+  font-family:'Hind Siliguri',sans-serif;
   background:var(--bg);
   overflow:hidden;
 
@@ -51,8 +52,7 @@ body{
   border-radius:16px;
   z-index:1000;
   font-weight:900;
-  box-shadow:0 6px 16px rgba(0,0,0,.10);
-  user-select:none;
+  box-shadow:0 6px 16px rgba(0,0,0,.1);
 }
 
 .pill{
@@ -71,9 +71,9 @@ body{
   font-weight:900;
   color:white;
   cursor:pointer;
-  box-shadow:0 4px 12px rgba(0,0,0,.12);
 }
-.btn:active{transform:scale(.98);}
+
+.btn:active{transform:scale(.96);}
 
 .start{background:#5c8aff;}
 .pause{background:#777;}
@@ -93,7 +93,6 @@ body{
   will-change:transform;
   transform:translate3d(0,0,0);
   backface-visibility:hidden;
-  transform-origin:0 0;
 }
 
 /* Enemy */
@@ -110,7 +109,6 @@ body{
   will-change:transform;
   transform:translate3d(0,0,0);
   backface-visibility:hidden;
-  transform-origin:0 0;
 }
 
 /* Overlay */
@@ -149,7 +147,6 @@ body{
   line-height:1.6;
   margin:12px 0;
   color:#222;
-  font-size:15px;
 }
 
 .bigbtn{
@@ -165,7 +162,7 @@ body{
 }
 
 .green{background:#33a853;}
-.gray{background:rgba(0,0,0,.1);color:#222;}
+.gray{background:#ccc;color:#222;}
 
 /* Credit */
 #credit{
@@ -178,15 +175,15 @@ body{
   color:#333;
   opacity:.8;
   z-index:1200;
-  white-space:nowrap;
-  text-align:center;
 }
 </style>
 </head>
 
 <body>
+
 <div id="game">
 
+<!-- HUD -->
 <div id="hud">
   <div class="pill">Score: <span id="score">0</span></div>
   <div class="pill">Time: <span id="time">00:00</span></div>
@@ -198,8 +195,10 @@ body{
 
 <div id="player"></div>
 
+<!-- Overlay -->
 <div id="overlay">
   <div id="modal">
+
     <h2 id="title">ছাত্রলীগের হাত থেকে আম্মারকে বাঁচান</h2>
 
     <div class="text" id="body">
@@ -208,19 +207,44 @@ body{
       ২) লোগো এড়ান<br>
       ৩) লাগলে খেলা শেষ<br>
       ৪) যত বাঁচবেন স্কোর বাড়বে<br>
-      <span style="color:red">⚠️ সাবধান!</span>
+      ⚠️ সাবধান!
     </div>
 
     <button class="bigbtn green" id="btnMain">খেলা শুরু করুন</button>
     <button class="bigbtn gray" id="btnClose">Close</button>
+
   </div>
 </div>
 
-<div id="credit">Developed by রাজশাহী বিশ্ববিদ্যালয় ছাত্রলীগ</div>
+<!-- Credit -->
+<div id="credit"></div>
 
 </div>
 
 <script>
+// ================= CREDIT OPTION =================
+const CREDIT_SHOW = true;
+const CREDIT_TEXT = "Developed by রাজশাহী বিশ্ববিদ্যালয় ছাত্রলীগ";
+const CREDIT_LINK = ""; // চাইলে লিংক দাও
+
+const creditEl = document.getElementById("credit");
+
+if(!CREDIT_SHOW){
+  creditEl.style.display="none";
+}else{
+  if(CREDIT_LINK){
+    creditEl.innerHTML =
+      `<a href="${CREDIT_LINK}" target="_blank"
+       style="color:inherit;text-decoration:none">
+       ${CREDIT_TEXT}
+       </a>`;
+  }else{
+    creditEl.textContent = CREDIT_TEXT;
+  }
+}
+// ================================================
+
+// DOM
 const game=document.getElementById("game");
 const player=document.getElementById("player");
 
@@ -239,6 +263,7 @@ const btnStart=document.getElementById("btnStart");
 const btnPause=document.getElementById("btnPause");
 const btnShare=document.getElementById("btnShare");
 
+// State
 let state="menu";
 let score=0;
 
@@ -256,7 +281,7 @@ let nextSpawn=0;
 
 const POOL=[];
 
-/* Utils */
+// Utils
 function fmt(s){
   s=Math.max(0,s|0);
   return String(Math.floor(s/60)).padStart(2,"0")+":"+
@@ -270,61 +295,55 @@ function playerY(){
 function setPlayerX(x){
   const w=game.clientWidth;
   playerX=Math.max(0,Math.min(w-PLAYER_W,x));
+
   player.style.transform=
-    `translate3d(${Math.round(playerX)}px,0,0)`;
+   `translate3d(${Math.round(playerX)}px,0,0)`;
 }
 
 function centerPlayer(){
   setPlayerX((game.clientWidth-PLAYER_W)/2);
 }
 
-/* Overlay */
+// Overlay
 function show(type){
+
   overlay.style.display="flex";
+  overlay.style.pointerEvents="auto";
 
   modal.style.borderColor="#2e7d32";
   title.style.color="#2e7d32";
 
   if(type==="menu"){
-    title.innerText="ছাত্রলীগের হাত থেকে আম্মারকে বাঁচান";
 
-    body.innerHTML=`
-      <b>খেলার নিয়ম:</b><br>
-      ১) আঙুল টেনে আম্মারকে নড়ান<br>
-      ২) লোগো এড়ান<br>
-      ৩) লাগলে খেলা শেষ<br>
-      ৪) যত বাঁচবেন স্কোর বাড়বে<br>
-      <span style="color:red">⚠️ সাবধান!</span>
-    `;
+    title.innerText="ছাত্রলীগের হাত থেকে আম্মারকে বাঁচান";
 
     btnMain.innerText="খেলা শুরু করুন";
     btnMain.onclick=startGame;
 
-    btnClose.innerText="Close";
     btnClose.onclick=hide;
   }
 
   if(type==="paused"){
+
     title.innerText="Paused";
     body.innerHTML="Resume করতে নিচের বাটনে চাপুন";
 
     btnMain.innerText="Resume";
     btnMain.onclick=resumeGame;
 
-    btnClose.innerText="Close";
     btnClose.onclick=hide;
   }
 
   if(type==="over"){
+
     modal.style.borderColor="#d32f2f";
     title.style.color="#d32f2f";
 
     title.innerText="খেলা শেষ!";
 
     body.innerHTML=`
-      <b>ছাত্রলীগ আম্মারকে ধরে ফেলেছে</b><br><br>
-      আপনার স্কোর:
-      <span style="color:red">${score}</span>
+      ছাত্রলীগ আম্মারকে ধরে ফেলেছে<br><br>
+      স্কোর: <b>${score}</b>
     `;
 
     btnMain.innerText="আবার খেলুন";
@@ -337,22 +356,28 @@ function show(type){
   }
 }
 
-function hide(){ overlay.style.display="none"; }
+function hide(){
+  overlay.style.display="none";
+  overlay.style.pointerEvents="none";
+}
 
-/* Game */
+// Game
 function reset(){
+
   for(const o of enemies){
     o.el.style.visibility="hidden";
     POOL.push(o.el);
   }
+
   enemies=[];
 
   score=0;
-  scoreEl.innerText="0";
+  scoreEl.innerText=0;
   timeEl.innerText="00:00";
 
   startTime=performance.now();
   last=startTime;
+
   nextSpawn=startTime+700;
 
   centerPlayer();
@@ -367,6 +392,7 @@ function startGame(){
 
 function pauseGame(){
   if(state!=="playing")return;
+
   state="paused";
   btnPause.innerText="Resume";
   show("paused");
@@ -374,6 +400,7 @@ function pauseGame(){
 
 function resumeGame(){
   if(state!=="paused")return;
+
   state="playing";
   last=performance.now();
   btnPause.innerText="Pause";
@@ -382,6 +409,7 @@ function resumeGame(){
 
 function gameOver(){
   if(state==="over")return;
+
   state="over";
   show("over");
 }
@@ -391,7 +419,7 @@ function togglePause(){
   else if(state==="paused")resumeGame();
 }
 
-/* Drag */
+// Drag
 function move(x){
   const r=game.getBoundingClientRect();
   setPlayerX(x-r.left-PLAYER_W/2);
@@ -401,18 +429,18 @@ game.addEventListener("pointerdown",e=>{
   drag=true;
   try{game.setPointerCapture(e.pointerId);}catch{}
   move(e.clientX);
-},{passive:false});
+});
 
 game.addEventListener("pointermove",e=>{
   if(!drag)return;
   e.preventDefault();
   move(e.clientX);
-},{passive:false});
+});
 
 game.addEventListener("pointerup",()=>drag=false);
 game.addEventListener("pointercancel",()=>drag=false);
 
-/* Enemies */
+// Enemies
 function getEnemy(){
   const el=POOL.pop();
   if(el)return el;
@@ -420,6 +448,7 @@ function getEnemy(){
   const n=document.createElement("div");
   n.className="enemy";
   game.appendChild(n);
+
   return n;
 }
 
@@ -442,8 +471,9 @@ function hit(px,py,ex,ey){
            py+PLAYER_H<ey||py>ey+ENEMY_H);
 }
 
-/* Loop */
+// Loop
 function loop(t){
+
   requestAnimationFrame(loop);
 
   if(state!=="playing")return;
@@ -463,10 +493,11 @@ function loop(t){
   for(let i=enemies.length-1;i>=0;i--){
 
     const o=enemies[i];
+
     o.y+=o.speed*dt;
 
     o.el.style.transform=
-      `translate3d(${Math.round(o.x)}px,${Math.round(o.y)}px,0)`;
+     `translate3d(${Math.round(o.x)}px,${Math.round(o.y)}px,0)`;
 
     if(hit(playerX,py,o.x,o.y)){
       gameOver();
@@ -474,6 +505,7 @@ function loop(t){
     }
 
     if(o.y>game.clientHeight+140){
+
       o.el.style.visibility="hidden";
       POOL.push(o.el);
       enemies.splice(i,1);
@@ -484,8 +516,9 @@ function loop(t){
   }
 }
 
-/* Share */
+// Share
 btnShare.onclick=()=>{
+
   const text=`আমি ${score} স্কোর করেছি!`;
   const url=location.href;
 
@@ -495,13 +528,28 @@ btnShare.onclick=()=>{
     window.open(`https://wa.me/?text=${encodeURIComponent(text+" "+url)}`);
 };
 
-/* Buttons */
-btnStart.onclick=startGame;
-btnPause.onclick=togglePause;
-btnMain.onclick=startGame;
-btnClose.onclick=hide;
+// PC + Mobile Button Fix
+function bindBtn(el,fn){
+  if(!el)return;
 
-/* Init */
+  el.addEventListener("click",e=>{
+    e.preventDefault();
+    fn();
+  });
+
+  el.addEventListener("pointerup",e=>{
+    e.preventDefault();
+    fn();
+  });
+}
+
+bindBtn(btnStart,startGame);
+bindBtn(btnMain,startGame);
+
+btnPause.addEventListener("click",togglePause);
+btnClose.addEventListener("click",hide);
+
+// Init
 centerPlayer();
 show("menu");
 
